Bug 453901 - [component diagram] Associations attached to ports are orphaned by move of the component
Summary: [component diagram] Associations attached to ports are orphaned by move of th...
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-16 18:21 UTC by Oliver Kellogg
Modified: 2022-05-16 18:39 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.34.70 (KDE releases 22.07.70)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oliver Kellogg 2022-05-16 18:21:02 UTC
SUMMARY
***
On a component diagram, moving a component  which has ports to which associations are attached leaves the associations at their original positions, i.e. the associations do not move along with their ports and appear "orphaned".
***


STEPS TO REPRODUCE
1. Create a component diagram with a component and another object such as a second component or an interface.
2. Create a port on the (first) component.
3. Create a unidirectional association from the port to the second object.
4. Move the (first) component.

OBSERVED RESULT
The unidirectional association remains unmoved at its original position.

EXPECTED RESULT
The association shall move along proportionally such that it remains attached to its port at all times.

SOFTWARE/OS VERSIONS
Umbrello 2.34 and git master up to commit  253f318 (2022-05-13)
Comment 1 Oliver Kellogg 2022-05-16 18:39:08 UTC
Git commit 098ed160f0d7d0615532ee1a0a4e69ed8ad06df8 by Oliver Kellogg.
Committed on 16/05/2022 at 18:34.
Pushed by okellogg into branch 'master'.

Fix "Associations attached to ports are orphaned by move of the component"

umbrello/umlwidgets/associationwidget.cpp
- Reduce PIXEL_TOLERANCE to 20.
- In function linePathStartsAt, on initializing wX and wY use
  widget->getX() and widget->getY(), respectively.
FIXED-IN: 2.34.70 (KDE releases 22.07.70)

M  +3    -3    umbrello/umlwidgets/associationwidget.cpp

https://invent.kde.org/sdk/umbrello/commit/098ed160f0d7d0615532ee1a0a4e69ed8ad06df8