Fix "Associations attached to ports are orphaned by move of the component"

umbrello/umlwidgets/associationwidget.cpp
- Reduce PIXEL_TOLERANCE to 20.
- In function linePathStartsAt, on initializing wX and wY use
  widget->getX() and widget->getY(), respectively.

BUG: 453901
FIXED-IN: 2.34.70 (KDE releases 22.07.70)